# gps-firmware

./: .clang-format  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  DATASHEET.md  DEVELOPER.md  DOCUMENTATION.md  DRIVER_GUIDE.md  NOTES.md  README.md  STM32G431X8_FLASH.ld  STM32G431XB_FLASH.ld
Core/Inc/: FreeRTOSConfig.h  main.h  stm32g4xx_hal_conf.h
Core/Src/: dma.c  fdcan.c  gpio.c  i2c.c  main.c  spi.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  syscalls_errno.c  tim.c  usart.c
Drivers/CMSIS/Device/ST/STM32G4xx/Source/Templates/gcc/: startup_stm32g431xx.s
SUFST/Inc/board/: board_config.h
SUFST/Inc/canbus/: can_defs.h  canbc.h  canbc_task.h
SUFST/Inc/fusion/: ahrs.h  geodesy.h  kf6.h  timebase.h
SUFST/Inc/gps/: gps_config.h  gps_i2c.h  gps_task.h  ubx.h
SUFST/Inc/imu/: imu_task.h  lsm6dso32.h  mag_cal.h
SUFST/Inc/laptimer/: gates.h  laptimer.h
SUFST/Inc/nmea/: aux_task.h  nmea_out.h  rtcm_bridge.h
SUFST/Inc/persist/: flash_store.h
SUFST/Inc/sys/: app.h  status.h  sys_task.h
SUFST/Src/canbus/: can_pack.c  canbc.c  canbc_task.c
SUFST/Src/fusion/: ahrs.c  geodesy.c  kf6.c  timebase.c
SUFST/Src/gps/: gps_config.c  gps_i2c.c  gps_task.c  ubx.c
SUFST/Src/imu/: imu_task.c  lsm6dso32.c  mag_cal.c
SUFST/Src/laptimer/: gates.c  laptimer.c
SUFST/Src/nmea/: aux_task.c  nmea_out.c  rtcm_bridge.c
SUFST/Src/persist/: flash_store.c
SUFST/Src/sys/: app.c  sys_task.c
cmake/: gcc-arm-none-eabi.cmake
docs/: ARCHITECTURE.md  DATASHEET.md  DEVELOPER.md  DOCUMENTATION.md  DRIVER_GUIDE.md  NOTES.md  QUICK_START.md
tests/: CMakeLists.txt  test_ahrs.c  test_ahrs.deps  test_can_pack.c  test_can_pack.deps  test_flash_store.c  test_flash_store.deps  test_gates.c  test_gates.deps  test_geodesy.c  test_geodesy.deps  test_kf6.c  test_kf6.deps  test_laptimer.c  test_laptimer.deps  test_mag_cal.c  test_mag_cal.deps  test_nmea_out.c  test_nmea_out.c.deps  test_timebase.c  test_timebase.deps  test_ubx.c  test_ubx.deps
tools/: GPS.dbc
tools/dashboard/: README.md  pyproject.toml
tools/dashboard/src/gps_dashboard/: __main__.py  decoder.py  enums.py  ingest.py  raw_frame.py  recorder.py  track_memory.py
tools/dashboard/src/gps_dashboard/can_sources/: base.py  live.py  replay.py  simulate.py
tools/dashboard/src/gps_dashboard/ui/: connection_panel.py  control_panel.py  main_window.py  plots_panel.py  status_panel.py  track_map.py
tools/dashboard/tests/: test_decoder.py  test_recorder.py  test_replay.py  test_simulate.py  test_track_memory.py
